objects/ASI_CRM_Consumer__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_AgeRange__c</fullName>
        <label>Age Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 21</fullName>
                </value>
                <value>
                    <fullName>21 - 30</fullName>
                </value>
                <value>
                    <fullName>31 - 40</fullName>
                </value>
                <value>
                    <fullName>41 - 50</fullName>
                </value>
                <value>
                    <fullName>51 - 60</fullName>
                </value>
                <value>
                    <fullName>61 - 70</fullName>
                </value>
                <value>
                    <fullName>71 - 80</fullName>
                </value>
                <value>
                    <fullName>&gt; 80</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_ConsumerNumber__c</fullName>
        <displayFormat>CSM-{YY}{000000}</displayFormat>
        <label>Consumer No.</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Consumers</relationshipLabel>
        <relationshipName>ASI_CRM_Customer_Consumer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_DateTime__c</fullName>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Facebook__c</fullName>
        <label>Facebook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_MobileNo__c</fullName>
        <label>Mobile No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PGLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PG Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Consumer_PGLeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PreferBrand__c</fullName>
        <label>Prefer brand</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Preference__c</fullName>
        <label>Preference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cognac</fullName>
                </value>
                <value>
                    <fullName>Whisky</fullName>
                </value>
                <value>
                    <fullName>Single Malt</fullName>
                </value>
                <value>
                    <fullName>Vodka</fullName>
                </value>
                <value>
                    <fullName>Wine</fullName>
                </value>
                <value>
                    <fullName>Champagne</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promoter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promoter</label>
        <referenceTo>ASI_CRM_Promoter__c</referenceTo>
        <relationshipLabel>Consumers</relationshipLabel>
        <relationshipName>ASI_CRM_Consumer_Promoter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark__c</fullName>
        <label>Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_StagingDateTime__c</fullName>
        <label>Staging DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SubmitDateTime__c</fullName>
        <label>Submit DateTime</label>
        <type>DateTime</type>
    </fields>
    <label>Consumer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_VN_Consumers</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Gender__c</columns>
        <columns>ASI_CRM_AgeRange__c</columns>
        <columns>ASI_CRM_PreferBrand__c</columns>
        <columns>ASI_CRM_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Consumer__c.ASI_CRM_VN_Consumer</value>
        </filters>
        <label>All VN Consumers</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Consumer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumers</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_Consumer</fullName>
        <active>true</active>
        <label>VN Consumer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>